Add API for fetching news description and url

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,9 @@
         "no-unused-vars": 1,
         "quotes": [ 1, "single"]
     },
+    "globals": {
+      "$": true
+    },
     "env": {
       "es6": true,
       "browser": true,
