jQuery for news fetch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,12 @@
         "optns"
     ],
     "cSpell.ignoreWords": [
+        "fnctn",
+        "mmedia",
         "nyregion",
         "realestate",
         "sundayreview",
-        "tmagazine"
+        "tmagazine",
+        "ttle"
     ]
 }
