Add preload media for Ajax requests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "fnctn",
         "mmedia",
         "nyregion",
+        "preload",
         "realestate",
         "sundayreview",
         "tmagazine",
