Style API section for mobile version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
     ],
     "cSpell.ignoreWords": [
         "fnctn",
+        "minmax",
         "mmedia",
+        "newsfetch",
         "nyregion",
         "preload",
         "realestate",
