Add custom fonts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     ],
     "cSpell.ignoreWords": [
         "fnctn",
+        "fontstyle",
         "minmax",
         "mmedia",
         "newsfetch",
