Transition implementation when requesting data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,16 +9,20 @@
         "optns"
     ],
     "cSpell.ignoreWords": [
+        "embedded",
         "fnctn",
         "fontstyle",
+        "iefix",
         "minmax",
         "mmedia",
         "newsfetch",
         "nyregion",
+        "opentype",
         "preload",
         "realestate",
         "sundayreview",
         "tmagazine",
+        "truetype",
         "ttle",
         "woff"
     ]
